Added draft layout

--- a/index.html
+++ b/index.html
@@ -1,1 +1,41 @@
-<!doctype html><title>Page title</title><p>Hi</p>
+<!doctype html><title>sparrow kintsugi</title>
+<link rel="stylesheet" href="/bundle.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Rufina:wght@400;700&display=swap" rel="stylesheet">
+
+<h1>sparrow kintusgi</h1>
+<p>using traditional methods and authentic, food-safe material</p> 
+<p>repairs by dan singer</p>
+
+
+<div class="parent">
+	<div class="div1">
+		<img class="gallery_img" src="assets/images/SilverBowl_Sq.png">				
+	</div>
+
+	<div class="div2"> 
+		<img class="gallery_img" src="assets/images/GreenPlate_4x6.png">	
+	</div>
+
+	<div class="div3"> 
+		<img class="gallery_img" src="assets/images/PinchBowlDone_Sq.png">	
+	</div>
+	<div class="div4"> <div class="block"></div> </div>
+	<div class="div5"> <div class="block"></div> </div>
+	<div class="div6"> <div class="block"></div> </div>
+	<div class="div7"> <div class="block"></div> </div>
+	<div class="div8"> <div class="block"></div> </div>
+</div> 
+
+<div class="flex-grid">
+	<div class="col">
+		<h1>about. text</h1>
+		<p>about. Hello this is some text</p>
+	</div>
+
+	<div class="col">
+		<h1>commissions</h1>
+		<p>Hello this is some text</p>
+	</div>
+</div>
