updated colors, max width

--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Rufina:wght@400;700&display=swap" rel="stylesheet">
 
-<h1>sparrow kintusgi</h1>
-<p>using traditional methods and authentic, food-safe material</p> 
-<p>repairs by dan singer</p>
+<div id="intro_block">
+	<h1>sparrow kintsugi</h1>
+	<div id="subtitle">
+		ceramic repair using traditional methods and authentic, food-safe materials 
+		<br />
+		based in Philadelphia, PA
+	</div>
+</div>	
 
 
 <div class="parent">
@@ -30,12 +35,12 @@
 
 <div class="flex-grid">
 	<div class="col">
-		<h1>about. text</h1>
+		<h2>about. text</h2>
 		<p>about. Hello this is some text</p>
 	</div>
 
 	<div class="col">
-		<h1>commissions</h1>
+		<h2>commissions</h2>
 		<p>Hello this is some text</p>
 	</div>
 </div>
