full first draft of site

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!doctype html><title>sparrow kintsugi</title>
+<!doctype html><title>Sparrow Kintsugi | Repairs</title>
+<link rel="icon" type="image/x-icon" href="assets/favicons/favicon.ico">
 <link rel="stylesheet" href="/bundle.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -7,9 +8,14 @@
 <div id="intro_block">
 	<h1>sparrow kintsugi</h1>
 	<div id="subtitle">
-		ceramic repair using traditional methods and authentic, food-safe materials 
+		Ceramic repair using traditional methods and authentic, food-safe materials 
 		<br />
-		based in Philadelphia, PA
+		— Based in Philadelphia, Pennsylvania, USA
+	</div>
+	<div class="flex-grid">
+		<div class="nav-item"><a href="#kintsugi">What is kintsugi?</a></div>
+		<div class="nav-item"><a href="#commissions">Commissions</a></div>
+		<div class="nav-item"><a href="#about">About</a></div>
 	</div>
 </div>	
 
@@ -35,12 +41,20 @@
 
 <div class="flex-grid">
 	<div class="col">
-		<h2>about. text</h2>
-		<p>about. Hello this is some text</p>
+		<h2 id="kintsugi">What is kintsugi?</h2>
+		<p>Kintsugi a Japanese art form of mending ceramics with gold to celebrate the repairs. It asks us to challenge our perception of what should be thrown away.</p> 
+		<p>Traditional kintsugi methods use urushi, a food-safe lacquer derived from the urushi tree, to mend and reinforce broken pieces and bring them back into reuse. While kintsugi derives its name from <em>kin</em>, for gold, there are a variety of finishes that can be employed for aesthetic effect.</p>
 	</div>
 
 	<div class="col">
-		<h2>commissions</h2>
-		<p>Hello this is some text</p>
+		<h2 id="commissions">Commissions</h2>
+		<p>Commissions are <em>open</em> for chipped, cracked, or broken ceramic pieces. Repairs are done to a food-safe standard, using authentic materials sourced from Japan. Most pieces take a minimum of 2-3 months to ensure safe handling and use. Pricing will vary significantly based on the complexity of the repair and amount of gold consumed, but please expect it to be at least $100 for gold repairs.</p>
+		<p>To discuss a commission, please contact dan AT phillykintsugi.com, including a photo of the damaged piece with a ruler for scale.</p>
+	</div>
+
+	<div class="col">
+		<h2 id="about">About</h2>
+		<p>Dan Singer is a kintsugi practitioner based in Philadelphia, PA, USA. He has received training in traditional kintsugi methods from <a href="https://www.instagram.com/makomako.kintsugi/?hl=en" target="_blank">Makomako</a> and <a href="https://www.urushi.info/" target="_blank">Gen Saratani</a>.</p>
+		<p>You can follow his work on <a href="https://www.instagram.com/sparrow_kintsugi/?hl-en" target="_blank">Instagram</a>.</p>
 	</div>
 </div>
