adjusted mobile view

--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
 <div id="intro_block">
 	<h1>sparrow kintsugi</h1>
 	<div id="subtitle">
-		Ceramic repair using traditional methods and authentic, food-safe materials 
-		<br />
-		— Based in Philadelphia, Pennsylvania, USA
+		<p>Ceramic repair using traditional methods and authentic, food-safe materials</p>
+		<p>Based in Philadelphia, Pennsylvania, USA</p>
 	</div>
-	<div class="flex-grid">
-		<div class="nav-item"><a href="#kintsugi">What is kintsugi?</a></div>
+	<div class="nav-grid">
+		<div class="nav-item"><a href="#kintsugi">Kintsugi?</a></div>
 		<div class="nav-item"><a href="#commissions">Commissions</a></div>
 		<div class="nav-item"><a href="#about">About</a></div>
 	</div>
