chrome mobile troubleshooting

--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <!doctype html><title>Sparrow Kintsugi | Repairs</title>
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<meta name="description" content="Traditional kintsugi repairs by Dan Singer in Philadelphia, PA.">
+<meta name="robots" content="index">
+
+
 <link rel="icon" type="image/x-icon" href="assets/favicons/favicon.ico">
 <link rel="stylesheet" href="/bundle.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Rufina:wght@400;700&display=swap" rel="stylesheet">
+
 
 <div id="intro_block">
 	<h1>sparrow kintsugi</h1>
