--- a/index.html
+++ b/index.html
@@ -6,97 +6,48 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<meta name="description" content="Traditional kintsugi repairs by Dan Singer in Philadelphia, PA.">
 	<meta name="robots" content="index">
-
+	
 	<link rel="icon" type="image/x-icon" href="assets/favicons/favicon.ico">
-	<link rel="stylesheet" href="/bundle.css">
+	<link rel="stylesheet" href="assets/css/bundle.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link rel="stylesheet"
-		href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Rufina:wght@400;700&display=swap">
+	href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Rufina:wght@400;700&display=swap">
 </head>
 
 <body>
-	<div id="intro_block">
-		<h1>sparrow kintsugi</h1>
-		<div id="subtitle">
-			<p>Ceramic repair using traditional methods and authentic, food-safe materials</p>
-			<p>Based in Philadelphia, Pennsylvania, USA</p>
+	<div class="grid-container">
+		<div class="hero-about vertical-center">
+			<h1>sparrow kintsugi</h1>
+			<p class="large">Ceramic repair using traditional methods and authentic, food-safe materials</p>
+			<p>Sparrow Kintsugi is Dan Singer. A kintsugi practitioner based in Philadelphia, PA, USA. He has received training in traditional kintsugi methods from <a href="https://www.instagram.com/makomako.kintsugi/?hl=en" target="_blank">Makomako</a> and <a href="https://www.instagram.com/makomako.kintsugi/?hl=en">Gen Saratani.</a></p>
+			<a href="https://www.instagram.com/sparrow_kintsugi/" target="_blank"><span class="icon social-ig"></span></a>
 		</div>
-		<div class="nav-grid">
-			<ul class="nav-list">
-				<li class="nav-item"><a href="#kintsugi">Kintsugi?</a></li>
-				<li class="nav-item"><a href="#commissions">Commissions</a></li>
-				<li class="nav-item"><a href="#about">About</a></li>
-			</ul>
+		<div>
+			<img src="assets/images/hero-image.png" alt=""></a>
 		</div>
 	</div>
-
-
-	<div class="parent">
-		<div class="div1">
-			<img class="gallery_img" src="assets/images/SilverBowl_Sq.png">
+	
+	<div class="grid-container">
+		<div>
+			<img src="assets/images/SilverBowl_Sq.png" alt=""></a>
 		</div>
-
-		<div class="div2">
-			<img class="gallery_img" src="assets/images/GreenPlate_4x6.png">
-		</div>
-
-		<div class="div3">
-			<img class="gallery_img" src="assets/images/PinchBowlDone_Sq.png">
-		</div>
-		<div class="div4">
-			<div class="block"></div>
-		</div>
-		<div class="div5">
-			<div class="block"></div>
-		</div>
-		<div class="div6">
-			<div class="block"></div>
-		</div>
-		<div class="div7">
-			<div class="block"></div>
-		</div>
-		<div class="div8">
-			<div class="block"></div>
+		<div class="about-kintsugi vertical-center">
+			<h2>What is kintsugi?</h2>
+			<p class="large">Kintsugi a Japanese art form of mending ceramics with gold to  celebrate the repairs. It asks us to challenge our perception of what  should be thrown away.</p>
+			<p>Traditional kintsugi methods use urushi, a food-safe lacquer  derived from the urushi tree, to mend and reinforce broken pieces and  bring them back into reuse. While kintsugi derives its name from kin, for gold, there are a variety of finishes that can be employed for aesthetic effect.</p>
 		</div>
 	</div>
-
-	<div class="flex-grid">
-		<div class="col">
-			<h2 id="kintsugi">What is kintsugi?</h2>
-			<p>Kintsugi a Japanese art form of mending ceramics with gold to celebrate the repairs. It asks us to
-				challenge
-				our perception of what should be thrown away.</p>
-			<p>Traditional kintsugi methods use urushi, a food-safe lacquer derived from the urushi tree, to mend and
-				reinforce broken pieces and bring them back into reuse. While kintsugi derives its name from
-				<em>kin</em>,
-				for gold, there are a variety of finishes that can be employed for aesthetic effect.
-			</p>
+	
+	<div class="grid-container">
+		<div class="comissions vertical-center">
+			<h2>Commissions</h2>
+			<p>Commissions are open for chipped, cracked, or broken ceramic pieces. Repairs are done to a food-safe standard, using authentic  materials sourced from Japan. Most pieces take a minimum of 2-3 months  to ensure safe handling and use. Pricing will vary significantly based  on the complexity of the repair and amount of gold consumed, but please  expect it to be at least $100 for gold repairs.</p>
+			<p>To discuss a commission please include a photo of the damaged piece with a ruler for scale.</p>
+			<a class="button" href="mailto:dan@phillykintsugi.com" target="_blank">Contact Me</a>
 		</div>
-
-		<div class="col">
-			<h2 id="commissions">Commissions</h2>
-			<p>Commissions are <em>open</em> for chipped, cracked, or broken ceramic pieces. Repairs are done to a
-				food-safe
-				standard, using authentic materials sourced from Japan. Most pieces take a minimum of 2-3 months to
-				ensure
-				safe handling and use. Pricing will vary significantly based on the complexity of the repair and amount
-				of
-				gold consumed, but please expect it to be at least $100 for gold repairs.</p>
-			<p>To discuss a commission, please contact dan AT phillykintsugi.com, including a photo of the damaged piece
-				with a ruler for scale.</p>
-		</div>
-
-		<div class="col">
-			<h2 id="about">About</h2>
-			<p>Dan Singer is a kintsugi practitioner based in Philadelphia, PA, USA. He has received training in
-				traditional
-				kintsugi methods from <a href="https://www.instagram.com/makomako.kintsugi/?hl=en"
-					target="_blank">Makomako</a> and <a href="https://www.urushi.info/" target="_blank">Gen
-					Saratani</a>.
-			</p>
-			<p>You can follow his work on <a href="https://www.instagram.com/sparrow_kintsugi/?hl-en"
-					target="_blank">Instagram</a>.</p>
+		<div>
+			<img src="assets/images/GreenPlate_4x6.png" alt=""></a>
 		</div>
 	</div>
 </body>
