--- a/index.html
+++ b/index.html
@@ -45,9 +45,8 @@
 	<div class="grid-container">
 		<div class="comissions vertical-center">
 			<h2>Commissions</h2>
-			<p>Commissions are open for chipped, cracked, or broken ceramic pieces. Repairs are done to a food-safe standard, using authentic  materials sourced from Japan. Most pieces take a minimum of 2-3 months  to ensure safe handling and use. Pricing will vary significantly based  on the complexity of the repair and amount of gold consumed, but please  expect it to be at least $100 for gold repairs.</p>
-			<p>To discuss a commission please include a photo of the damaged piece with a ruler for scale.</p>
-			<a class="button" href="mailto:dan@phillykintsugi.com" target="_blank">Contact Me</a>
+			<p>Commissions are open for chipped, cracked, or broken ceramic pieces. Repairs are done to a food-safe standard, using authentic  materials sourced from Japan. Most pieces take a minimum of 4-5 months  to ensure safe handling and use. Pricing will vary significantly based  on the complexity of the repair and amount of gold consumed, but please  expect it to be at least $100 for gold repairs.</p>
+			<p>To discuss a commission please reach me at dan @ phillykintsugi.com. Include photos of the damaged piece with a ruler for scale.</p>
 		</div>
 		<div>
 			<img src="assets/images/GreenPlate_4x6.png" alt=""></a>
